--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <body>
 
+<!-- MOBILE / DESKTOP REDIRECTION -->
   <div class="mobile-redirection">
     <h1>The site is not yet available on mobile, try it on desktop!</h1>
   </div>
 
+<!-- HEADER  -->
   <header>
     <div class="informations">
       <div class="dots-container">
@@ -46,8 +48,8 @@
 
   </header>
 
+<!-- MAIN CONTENT -->
   <main>
-
 
     <!-- —————— BUILDER ——————— -->
     <div class="builder-section">
@@ -86,46 +88,65 @@
 
       <section class="selection-container">
 
+
+<!-- LAYER 1 -->
         <ul class="layer-selection">
           <div class="visible-part">
             <p>LAYER 1</p>
             <img class="layer-arrow" src="assets/svg/layer-arrow.svg" alt="">
           </div>
           <li class="layer">
+            <img class="arrow-left" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
             <ul id="layer1-images-container" class="images-container"></ul>
+            <img class="arrow-right" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
           </li>
         </ul>
 
+<!-- LAYER 2 -->
         <ul class="layer-selection">
           <div class="visible-part">
             <p>LAYER 2</p>
             <img class="layer-arrow" src="assets/svg/layer-arrow.svg" alt="">
           </div>
           <li class="layer">
+            <img class="arrow-left" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
+
             <ul id="layer2-images-container" class="images-container"></ul>
+            <img class="arrow-right" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
+
           </li>
         </ul>
 
+<!-- LAYER 3 -->
         <ul class="layer-selection">
           <div class="visible-part">
             <p>LAYER 3</p>
             <img class="layer-arrow" src="assets/svg/layer-arrow.svg" alt="">
           </div>
           <li class="layer">
+            <img class="arrow-left" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
+
             <ul id="layer3-images-container" class="images-container"></ul>
+            <img class="arrow-right" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
+
           </li>
         </ul>
 
+<!-- LAYER 4 -->
         <ul class="layer-selection">
           <div class="visible-part">
             <p>LAYER 4</p>
             <img class="layer-arrow" src="assets/svg/layer-arrow.svg" alt="">
           </div>
           <li class="layer">
+            <img class="arrow-left" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
             <ul id="layer4-images-container" class="images-container"></ul>
+            <img class="arrow-right" src="assets/svg/iconmonstr-caret-left-filled.svg" alt="">
+
           </li>
         </ul>
 
+<!-- DOWNLOAD BUTTON -->
         <div id="download-button">
           <img src="assets/svg/download-cloud.svg" alt="">
           <p>DOWNLOAD</p>
